@@ -23,30 +23,10 @@ SET(OpenJPEG_SRCS
   tgt.c
 )
 
-# Prepare the .def file (Module definition)
-# depending on wether we are:
-# 1. Building a dll (shared lib)
-# 2. Wether we are using cl or bcc32 (underscore convention)
+# Pass proper definition to preprocessor to generate
+# shared lib
 IF(WIN32 AND BUILD_SHARED_LIBS)
-  SET(UNDERSCORE)
-  # Borland expect symbol to start with _
-  IF(BORLAND)
-    SET(UNDERSCORE "_")
-  ENDIF(BORLAND)
-  # Borland will by default use a .def file if present in
-  # the binary directory
-  CONFIGURE_FILE(
-    ${OPENJPEG_SOURCE_DIR}/libopenjpeg/openjpeg.def.in
-    ${OPENJPEG_BINARY_DIR}/libopenjpeg/openjpeg.def
-    @ONLY IMMEDIATE
-    )
-  # You can directly pass a .def file to cl this is
-  # recognized
-  IF(NOT BORLAND AND NOT MINGW)
-    SET(OpenJPEG_SRCS ${OpenJPEG_SRCS}
-      ${OPENJPEG_BINARY_DIR}/libopenjpeg/openjpeg.def
-      )
-  ENDIF(NOT BORLAND AND NOT MINGW)
+  ADD_DEFINITIONS(-DOPJ_EXPORTS)
 ENDIF(WIN32 AND BUILD_SHARED_LIBS)
 
 # Create the library
