@@ -11,6 +11,7 @@ January 31, 2006
 - [Mathieu Malaterre] Remove all references to OPJ_EXPORT, no declspec in header file anymore
 + [Mathieu Malaterre] Add a def.in file which is a template for Module Definition
 + [Herve Drolon] added MSVC project and compiler directives to build a 'standard' WIN32 DLL
+! [Mathieu Malaterre] Update CMake to match the new shared lib system (no more def file)
 
 January 27, 2006
 * [Antonin Descampe] fixed a two initialization problems in t1.c and tcd.c
